--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap-maskedinput": "^0.5.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "semantic-ui-css": "^2.5.0",
     "sweetalert2": "^11.6.15",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4",
