--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.7.0",
     "react-bootstrap-maskedinput": "^0.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
